--- a/pom.xml
+++ b/pom.xml
@@ -101,45 +101,70 @@
                     </excludes>
                 </configuration>
             </plugin>
+<!--            for read properties used in pom.xml from config server -->
 <!--            <plugin>-->
-<!--                <groupId>com.querydsl</groupId>-->
-<!--                <artifactId>querydsl-maven-plugin</artifactId>-->
-<!--                <version>${querydsl.version}</version>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>properties-maven-plugin</artifactId>-->
+<!--                <version>1.0.0</version>-->
 <!--                <executions>-->
 <!--                    <execution>-->
-<!--                        <phase>generate-sources</phase>-->
+<!--                        <phase>initialize</phase>-->
 <!--                        <goals>-->
-<!--                            <goal>export</goal>-->
+<!--                            <goal>read-project-properties</goal>-->
 <!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <urls>-->
+<!--                                <url>-->
+<!--                                    http://${config.server.address}/${spring.application.name}/default/master/pom.properties-->
+<!--                                </url>-->
+<!--                            </urls>-->
+<!--                        </configuration>-->
 <!--                    </execution>-->
 <!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <jdbcDriver>${jdbc.driver}</jdbcDriver>-->
-<!--                    <jdbcUrl>${jdbc.url}</jdbcUrl>-->
-<!--                    <jdbcUser>${jdbc.username}</jdbcUser>-->
-<!--                    <jdbcPassword>${jdbc.password}</jdbcPassword>-->
-<!--                    <schemaPattern>${jdbc.schema}</schemaPattern>-->
-<!--                    <packageName>com.saber.springquerydsldemo.model.command</packageName>-->
-<!--                    <beanPackageName>com.saber.springquerydsldemo.model.command.</beanPackageName>-->
-<!--                    <targetFolder>target/generated-sources/sql</targetFolder>-->
-<!--                    <beansTargetFolder>target/generated-sources/sql</beansTargetFolder>-->
-<!--                    <exportAll>false</exportAll>-->
-<!--                    <exportBeans>false</exportBeans>-->
-<!--                    <exportViews>false</exportViews>-->
-<!--                    <sourceFolder>src</sourceFolder>-->
-<!--                    <customTypes>-->
-<!--                        <customType>com.querydsl.sql.types.JSR310LocalDateTimeType</customType>-->
-<!--                    </customTypes>-->
-<!--                </configuration>-->
-<!--                <dependencies>-->
-<!--                    <dependency>-->
-<!--                        <groupId>com.mysql</groupId>-->
-<!--                        <artifactId>mysql-connector-j</artifactId>-->
-<!--                        <version>8.0.32</version>-->
-<!--                        <scope>runtime</scope>-->
-<!--                    </dependency>-->
-<!--                </dependencies>-->
 <!--            </plugin>-->
+            <plugin>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-maven-plugin</artifactId>
+                <version>${querydsl.version}</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>export</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jdbcDriver>${jdbc.driver}</jdbcDriver>
+                    <jdbcUrl>${jdbc.url}</jdbcUrl>
+                    <jdbcUser>${jdbc.username}</jdbcUser>
+                    <jdbcPassword>${jdbc.password}</jdbcPassword>
+                    <schemaPattern>${jdbc.schema}</schemaPattern>
+                    <packageName>com.saber.springquerydsldemo.model.command</packageName>
+                    <targetFolder>target/generated-sources/sql</targetFolder>
+                    <beansTargetFolder>target/generated-sources/sql</beansTargetFolder>
+                    <exportAll>false</exportAll>
+                    <exportBeans>false</exportBeans>
+                    <exportViews>false</exportViews>
+                    <sourceFolder>src</sourceFolder>
+                    <customTypes>
+                        <customType>com.querydsl.sql.types.JSR310LocalDateTimeType</customType>
+                    </customTypes>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mysql</groupId>
+                        <artifactId>mysql-connector-j</artifactId>
+                        <version>8.0.32</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.oracle</groupId>
+                        <artifactId>ojdbc8</artifactId>
+                        <version>12.2.0.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
