--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,19 @@
     <properties>
         <java.version>17</java.version>
         <querydsl.version>5.0.0</querydsl.version>
-        <jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
+        <jdbc.driver>com.mysql.cj.jdbc.Driver</jdbc.driver>
         <jdbc.url>jdbc:mysql://localhost:3306/test2</jdbc.url>
         <jdbc.username>saber66</jdbc.username>
         <jdbc.password>AdminSaber66</jdbc.password>
         <jdbc.schema>test2</jdbc.schema>
+
+
+<!--        <jdbc.driver>oracle.jdbc.driver.OracleDriver</jdbc.driver>-->
+<!--        <jdbc.url>jdbc:oracle:thin:@192.168.100.121:1521/losdev</jdbc.url>-->
+<!--        <jdbc.username>APP_CLT</jdbc.username>-->
+<!--        <jdbc.password>App321</jdbc.password>-->
+<!--        <jdbc.schema>CLT</jdbc.schema>-->
+
     </properties>
     <dependencies>
         <dependency>
@@ -45,6 +53,12 @@
             <version>8.0.32</version>
             <scope>runtime</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.42</version>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
@@ -141,6 +155,7 @@
                     <jdbcPassword>${jdbc.password}</jdbcPassword>
                     <schemaPattern>${jdbc.schema}</schemaPattern>
                     <packageName>com.saber.springquerydsldemo.model.command</packageName>
+                    <beanPackageName>com.saber.springquerydsldemo.model.command.</beanPackageName>
                     <targetFolder>target/generated-sources/sql</targetFolder>
                     <beansTargetFolder>target/generated-sources/sql</beansTargetFolder>
                     <exportAll>false</exportAll>
@@ -158,11 +173,11 @@
                         <version>8.0.32</version>
                         <scope>runtime</scope>
                     </dependency>
-                    <dependency>
-                        <groupId>com.oracle</groupId>
-                        <artifactId>ojdbc8</artifactId>
-                        <version>12.2.0.1</version>
-                    </dependency>
+<!--                    <dependency>-->
+<!--                        <groupId>com.oracle</groupId>-->
+<!--                        <artifactId>ojdbc8</artifactId>-->
+<!--                        <version>12.2.0.1</version>-->
+<!--                    </dependency>-->
                 </dependencies>
             </plugin>
         </plugins>
